modify swagger object
